# baker

./: CMakeLists.txt  README.md
etc/: sample.conf
pie/: device.cpp  device.hpp  types.cpp  types.hpp
src/: main.cpp  remote.cpp  remote.hpp  set-uid.cpp  util.cpp  util.hpp
systemd/: baker@.service
udev/: 50-baker.rules
